# pyproject.toml for ItemResponsePrediction

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "item-response-prediction"
version = "0.1.0"
description = "Adaptive item recommendation and Bayesian ability estimation (2PL & ideal-point) with Bayes/Bandit/Hybrid engines and Plotly visualizations."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
{ name = "Mugalan", email = "[mugalan@gmail.com](mailto:mugalan@gmail.com)" }
]

dependencies = [
"numpy>=1.21",
"plotly>=5.0",
]

[project.urls]

# Update this to the actual repository URL

Repository = "https://github.com/mugalan/item-response-prediction"

[tool.setuptools.packages.find]
where = ["."]
